fix wrapping link

--- a/admin/atrandafir582.css
+++ b/admin/atrandafir582.css
@@ -164,7 +164,6 @@
 
     #footer #design {
         display: block;
-        width: 150px;
         height: 30px;
         float: right;
         line-height: 20px;
